--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "frontend:start": "cd frontend && yarn start",
     "backend:start": "cd backend && node index.js",
     "backend:setup": "cd backend && yarn install"
   }
