--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "frontend:start": "cd frontend && yarn start",
+    "frontend:setup": "cd frontend && yarn install",
     "backend:start": "cd backend && node index.js",
     "backend:setup": "cd backend && yarn install"
   }
